dark mode icon fix

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,7 +5,7 @@
 :root {
   .dark-theme {
 
-    --ion-background-color:#141414;
+    --ion-background-color:#1f1f1f;
     --ion-text-color: #ffffff;
 
     ion-alert.select-alert {
